tests/compilefail70.out
[1mtests/compilefail70.pas:10:23: [0m[1m[91merror:[0m 'to' or 'downto' expected, instead saw: 'do'
    10 | 	for i := 17 or 19 do