tests/compilefail70.pas
program compilefail70(output);
{typo in for statement}


var i:integer;


begin
	
	for i := 17 or 19 do 
		writeln(i);

end.
